# mandelbrot_c

./: CMakeLists.txt  README.md
shaders/: mandelbrot.frag
src/: main.c
